fixed section overlapping

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -58,7 +58,7 @@ body {
         height: 100vh;
 
         @media screen and (max-width:767px) {
-            height: 0vh;
+            height: 70vh;
         }
 
         div {
